--- a/Youtube.com/Youtube.html
+++ b/Youtube.com/Youtube.html
@@ -4,24 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Youtube Clone</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
     <!-- <link rel="stylesheet" href="Youtube.css"> -->
     <style>
+        p{
+            font-family: 'Roboto', Arial, sans-serif;
+            margin-top: 0;
+            margin-bottom: 0;
+        }
        .thumbnail {
             width: 260px;
             display: block;
         }
         .searchbar {
+            display: block;
             font-size: 16px;
             width: 190px;
             height: 40px;
             border-radius: 5px;
             border: 1px solid rgb(178, 178, 178);
             margin-top: 5px;
+            margin-bottom: 5px;
         }
-        .videotitle{
-           width: 260px;
-
-        }
+        
         .video-author,
         .video-stats{
             display: block;
@@ -29,19 +37,90 @@
             color: rgb(96, 96, 96);
             margin-top: 1px;
         }
+        .video-author{
+            margin-bottom: 6px;
+        }
+        .video-preview{
+            width: 270px;
+            display: inline-block;
+            vertical-align: top;
+            margin-right:15px;
+        }
+        .channel-pic{
+            display: inline-block;
+            width: 36px;
+            vertical-align: top;
+        }
+        .video-info{
+            display: inline-block;
+            width: 220px;
+            margin-left: 5px;
+        }
+        .profile{
+            width: 36px;
+            height: 36px;
+            border-radius: 50%;
+        }
+        .videotitle{
+            font-weight: 500;
+            margin-top: 0px;
+            margin-bottom: 12px;
+        }
+        .video-content{
+            margin-top: 12px;
+        }
     </style>
 </head>
 <body>
 
     <input class="searchbar" type="text" placeholder="Search">
 
-    <img class="thumbnail" src="./thumbanils/thumbnail-1.webp">
+    <div class="video-preview">
 
-    <p class="videotitle">
-        Talking Tech and AI with Google CEO Sundar Pichai!</p>
+        <div>
+            <img class="thumbnail" src="./thumbanils/thumbnail-1.webp">
+        </div>
+        <div  class="video-content">
+            <div class="channel-pic">
+                <img class="profile" src="./profiles/channel-1.jpeg">
+            </div>
+            <div class="video-info">
+                  <div>
+                    <p class="videotitle">
+                    Talking Tech and AI with Google CEO Sundar Pichai!</p>
+                </div>
+                <div>
+                    <p class="video-author">Marques Brownlee</p>
+                </div>
+                <div>
+                    <p class="video-stats">3.4M views · 6 months ago</p>
+                </div>
+            </div>   
+        </div>
+    </div>
 
-        <p class="video-author">Marques Brownlee</p>
+    <div class="video-preview">
 
-        <p class="video-stats">3.4M views · 6 months ago</p>
+        <div>
+            <img class="thumbnail" src="./thumbanils/thumbnail-2.webp">
+        </div>
+        <div  class="video-content">
+            <div class="channel-pic">
+                <img class="profile" src="./profiles/channel-2.jpeg">
+            </div>
+            <div class="video-info">
+                  <div>
+                    <p class="videotitle">
+                        Try Not To Laugh Challenge #9</p>
+                </div>
+                <div>
+                    <p class="video-author">Markiplier</p>
+                </div>
+                <div>
+                    <p class="video-stats">19M views · 4 years ago</p>
+                </div>
+            </div>   
+        </div>
+    </div>
 </body>
 </html>
